🦄 refactor: refatorar projeto
